--- a/PitBoss/UserControls/Spotter_UserControl.xaml
+++ b/PitBoss/UserControls/Spotter_UserControl.xaml
@@ -4,8 +4,12 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:PitBoss.UserControls"
+             xmlns:validators="clr-namespace:PitBoss.Validators"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800" Background="White">
+    <UserControl.Resources>
+        <validators:DoubleMinMaxValidator x:Key="doubleMinMaxValidator"/>
+    </UserControl.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
@@ -16,7 +20,27 @@
             <RowDefinition/>
             <RowDefinition/>
         </Grid.RowDefinitions>
-        <Button Grid.Row="0" Grid.Column="0" x:Name="SendCoords_Button" Content="Send Coords" Click="SendCoords_Button_Click" Margin="5,5,5,5"/>
+        <StackPanel Grid.Row="0" Grid.Column="0">
+            <TextBox x:Name="Az_TextBox">
+                <TextBox.Text>
+                    <Binding Path="LatestAz" NotifyOnValidationError="True">
+                        <Binding.ValidationRules>
+                            <validators:DoubleMinMaxValidator Min="0.0" Max="359.9"/>
+                        </Binding.ValidationRules>
+                    </Binding>
+                </TextBox.Text>
+            </TextBox>
+            <TextBox x:Name="Dist_TextBox">
+                <TextBox.Text>
+                    <Binding Path="LatestDist" NotifyOnValidationError="True">
+                        <Binding.ValidationRules>
+                            <validators:DoubleMinMaxValidator Min="0.0" Max="1000.0"/>
+                        </Binding.ValidationRules>
+                    </Binding>
+                </TextBox.Text>
+            </TextBox>
+        </StackPanel>
+        <Button Grid.Row="0" Grid.Column="1" x:Name="SendCoords_Button" Content="Send Coords" Click="SendCoords_Button_Click" Margin="5,5,5,5"/>
         <Button Grid.Row="2" Grid.Column="1" x:Name="OpenConnection_Button" Content="Open Connection" Click="OpenConnection_Button_Click" Margin="5,5,5,5"/>
 
     </Grid>
