--- a/PitBoss/App.xaml
+++ b/PitBoss/App.xaml
@@ -2,8 +2,8 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:PitBoss"
-             Startup="OnStartup"
-             Exit="OnExit">
+             Startup="Application_Startup"
+               Exit="Application_Exit">
     <Application.Resources>
          
     </Application.Resources>
