--- a/PitBoss/UserControls/GunBattery_UserControl.xaml
+++ b/PitBoss/UserControls/GunBattery_UserControl.xaml
@@ -5,10 +5,9 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:PitBoss.UserControls"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800" Background="white">
+             d:DesignHeight="450" d:DesignWidth="400" Background="white">
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition/>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
@@ -16,31 +15,46 @@
             <RowDefinition/>
             <RowDefinition/>
         </Grid.RowDefinitions>
-        <StackPanel Grid.Row="0" Grid.Column="0">
-            <StackPanel Orientation="Horizontal">
-                <TextBlock>Az: </TextBlock>
-                <TextBox x:Name="Az_TextBox" Text="{Binding Path=LatestAz}" Width="75"/>
-            </StackPanel>
-            <StackPanel Orientation="Horizontal">
-                <TextBlock>Dist: </TextBlock>
-                <TextBox x:Name="Dist_TextBox" Text="{Binding Path=LatestDist}" Width="75"/>
-            </StackPanel>
-           
-        </StackPanel>
-        <TextBlock Grid.Row="1" Grid.Column="0" Text="Spotter IP: " VerticalAlignment="Center" HorizontalAlignment="Right" Margin="5,5,5,5"/>
-        <TextBox Grid.Row="1" Grid.Column="1" x:Name="spotterIp_TextBox" Text="" Height="25" Margin="5,5,5,5"/>
+        <GroupBox Grid.Row="0" Grid.Column="0" Header="Firing Coordinates">
+            <StackPanel Margin="3,3,3,3">
 
-        <Button Grid.Row="2" Grid.Column="1" x:Name="Connect_Button" Content="Connect" Click="Connect_Button_Click" Height="30" Width="60" Margin="5,5,5,5"/>
-        <StackPanel Grid.Row="2" Grid.Column="0" >
-            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                <TextBlock Text="Transparency: "/>
-                <TextBox x:Name="OverlayTransparency_TextBox" IsReadOnly="True" Text="{Binding Path=Opacity, StringFormat={}{0:N2}}" Width="50"/>
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock Width="35" Margin="3,3,3,3" FontSize="20" >Az:</TextBlock>
+                    <TextBox x:Name="Az_TextBox" Text="{Binding Path=LatestAz}" IsReadOnly="True" FontSize="20" Width="75" Margin="3,3,3,3"/>
+                </StackPanel>
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock Width="35" Margin="3,3,3,3" FontSize="20" >Dist:</TextBlock>
+                    <TextBox x:Name="Dist_TextBox" Text="{Binding Path=LatestDist}" IsReadOnly="True" FontSize="20"  Width="75" Margin="3,3,3,3"/>
+                </StackPanel>
             </StackPanel>
-            
-            <Slider x:Name="OverlayTransparency_Slider" Maximum="1.0" Minimum="0.0" SmallChange="0.1" TickFrequency="0.05" IsSnapToTickEnabled="True" TickPlacement="TopLeft" Width="200" Value="{Binding Path=Opacity}"/>
-            <Button x:Name="ToggleOverlay_Button" Content="Toggle Overlay" Click="ToggleOverlay_Button_Click" Height="30" Width="120" Margin="5,5,5,5"/>
-        </StackPanel>
+        </GroupBox>
+
         
+        <GroupBox Grid.Row="1" Grid.Column="0" Header="Overlay Settings">
+            <StackPanel >
+                <Button x:Name="ToggleOverlay_Button" Content="Toggle Overlay" Click="ToggleOverlay_Button_Click" HorizontalAlignment="Left" Height="30" Width="120" Margin="3,3,3,3"/>
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Left">
+                    <TextBlock Text="Transparency: " Margin="3,3,3,3"/>
+                    <TextBox x:Name="OverlayTransparency_TextBox" IsReadOnly="True" Text="{Binding Path=Opacity, StringFormat={}{0:N2}}" HorizontalAlignment="Left" Width="50" Margin="3,3,3,3"/>
+                </StackPanel>
 
+                <Slider x:Name="OverlayTransparency_Slider" Maximum="1.0" Minimum="0.0" SmallChange="0.1" TickFrequency="0.05" IsSnapToTickEnabled="True" TickPlacement="TopLeft" Width="200" Value="{Binding Path=Opacity}" HorizontalAlignment="Left" Margin="3,3,3,3"/>
+                
+            </StackPanel>
+        </GroupBox>
+        <GroupBox Grid.Row="2" Grid.Column="0" Header="Connection Settings">
+            <StackPanel >
+                <StackPanel Orientation="Horizontal" >
+                    <TextBlock Text="Spotter IP: " VerticalAlignment="Center" HorizontalAlignment="Left" Margin="5,5,5,5"/>
+                    <TextBox x:Name="spotterIp_TextBox" Text="" Height="25" Width="125" Margin="5,5,5,5">
+                        <TextBox.ToolTip>
+                            IP:Port format. ex: 192.168.0.1:5005
+                        </TextBox.ToolTip>
+                    </TextBox>
+                    <Button x:Name="Connect_Button" Content="Connect" Click="Connect_Button_Click" VerticalAlignment="Center" Height="30" Width="65" Margin="15,5,5,5"/>
+                </StackPanel>
+                
+            </StackPanel>
+        </GroupBox>
     </Grid>
 </UserControl>
