Fixes disconnect notification not working

--- a/PitBoss/UserControls/Spotter_UserControl.xaml
+++ b/PitBoss/UserControls/Spotter_UserControl.xaml
@@ -60,7 +60,7 @@
             <Button x:Name="OpenConnection_Button" Content="Open Connection" HorizontalAlignment="Left" VerticalAlignment="Top" Click="OpenConnection_Button_Click" Margin="5,35,5,5"/>
             <StackPanel Orientation="Horizontal">
                 <TextBlock Text="Listening Port: " Margin="5,5,0,5"/>
-                <TextBlock x:Name="ListeningPort_TextBlock" Text="5005" Margin="0,5,5,5"/><!--Text="{Binding Path=ListeningPort}"-->
+                <TextBlock x:Name="ListeningPort_TextBlock" Margin="0,5,5,5" Text="{Binding Path=ServerActiveListeningPort}" />
             </StackPanel>
         </StackPanel>
 
