--- a/PitBoss/UserControls/Windows/Overlay_Window.xaml
+++ b/PitBoss/UserControls/Windows/Overlay_Window.xaml
@@ -19,14 +19,11 @@
                 <RowDefinition/>
                 <RowDefinition/>
             </Grid.RowDefinitions>
-
-            <TextBlock x:Name="AzLabel_TextBlock"  Grid.Row="0" Grid.Column="0" Text="Az: " Foreground="{Binding Path=OverlayLabelsFontColor}" FontSize="{Binding Path=OverlayFontSize}" VerticalAlignment="Bottom" HorizontalAlignment="Right" Margin="2,2,2,2"/>
-            <TextBlock x:Name="DistLabel_TextBlock" Grid.Row="1" Grid.Column="0" Text="Dist: " Foreground="{Binding Path=OverlayLabelsFontColor}" FontSize="{Binding Path=OverlayFontSize}" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="2,2,2,2"/>
-
-            <TextBlock x:Name="AzValue_TextBlock" Grid.Row="0" Grid.Column="1" Text="{Binding Path=LatestAz}" Foreground="{Binding userOptions.OverlayValuesFontColor}" FontSize="{Binding userOptions.OverlayFontSize}" VerticalAlignment="Bottom" HorizontalAlignment="Left" Margin="2,2,2,2">
-
-            </TextBlock>
-            <TextBlock x:Name="DistValue_TextBlock" Grid.Row="1" Grid.Column="1" Text="{Binding Path=LatestDist}" Foreground="{Binding userOptions.OverlayValuesFontColor}" FontSize="{Binding userOptions.OverlayFontSize}" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="2,2,2,2"/>
+            <TextBlock x:Name="DistValue_TextBlock" Grid.Row="0" Grid.Column="1" Text="{Binding Path=LatestDist}" Foreground="{Binding userOptions.OverlayValuesFontColor}" FontSize="{Binding userOptions.OverlayFontSize}" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="2,2,2,2"/>
+            <TextBlock x:Name="DistLabel_TextBlock" Grid.Row="0" Grid.Column="0" Text="Dist: " Foreground="{Binding Path=OverlayLabelsFontColor}" FontSize="{Binding Path=OverlayFontSize}" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="2,2,2,2"/>
+            <TextBlock x:Name="AzLabel_TextBlock"  Grid.Row="1" Grid.Column="0" Text="Az: " Foreground="{Binding Path=OverlayLabelsFontColor}" FontSize="{Binding Path=OverlayFontSize}" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="2,2,2,2"/>
+            <TextBlock x:Name="AzValue_TextBlock" Grid.Row="1" Grid.Column="1" Text="{Binding Path=LatestAz}" Foreground="{Binding userOptions.OverlayValuesFontColor}" FontSize="{Binding userOptions.OverlayFontSize}" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="2,2,2,2"/>
+            
         </Grid>
     </Border>
 </Window>
